welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:13: error: not found: value max2
    if(max2<nums(i) && i!=indiceMax){max2=nums(i)}
       ^max2Value:13: error: not found: value max2
    if(max2<nums(i) && i!=indiceMax){max2=nums(i)}
                                     ^max2Value:15: error: not found: value max2
  return max2
         ^